--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0",
     "xlsx": "^0.16.2",
+    "zx-comparison": "^1.0.3",
     "zx-count": "^0.3.4",
     "zx-icon": "^1.0.5",
     "zx-keel": "^0.9.0",
     "zx-layouts": "^0.1.5",
     "zx-magnifie": "^0.4.0",
     "zx-markdown-editor": "^0.0.1",
+    "zx-media": "^0.0.1",
     "zx-player": "^0.9.6",
     "zx-verify": "^0.0.1"
   },
